--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,14 +1,43 @@
+@font-face{
+  font-family: roboto-slab;
+  src: url('/fonts/Roboto_Slab/RobotoSlab-VariableFont_wght.ttf')
+}
+.left {
+  background-color: gainsboro;
+  grid-area: left;
+  background-repeat: repeat-y;
+}
+.right {
+  background-color: royalblue;
+  grid-area: right;
+  background-repeat: repeat-y;
+  content: "";
+}
+
+.background {
+  width: 100%;
+  height: 100em;
+  position: absolute;
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-template-areas: "left right";
+  z-index: -1;
+  border: medium ridge black;
+}
+
 .container {
+  position: absolute;
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 .main {
-  padding: 5rem 0;
+  padding: .5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -16,6 +45,10 @@
   align-items: center;
 }
 
+.monogram {
+  max-width: 100%;
+  height: 125px;
+}
 .footer {
   width: 100%;
   height: 100px;
@@ -35,26 +68,23 @@
   align-items: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
-  line-height: 1.15;
+  line-height: 1;
   font-size: 4rem;
+  font-family: roboto-slab;
 }
 
 .title,
-.description {
+.description,
+.occupation {
   text-align: center;
+}
+
+.occupation {
+  margin: 2;
+  line-height: .9;
+  font-size: 3rem;
 }
 
 .description {
@@ -121,3 +151,19 @@
     flex-direction: column;
   }
 }
+@media (min-width: 320px) {
+  .occupation {
+    font-size: 1.5rem;
+  }
+}
+/* Small (sm) */
+@media (min-width: 640px) { /* ... */ }
+
+/* Medium (md) */
+@media (min-width: 768px) { /* ... */ }
+
+/* Large (lg) */
+@media (min-width: 1024px) { /* ... */ }
+
+/* Extra Large (xl) */
+@media (min-width: 1280px) { /* ... */ }
